# internal/api/docs/swagger.yaml
@@ -1027,6 +1027,13 @@ components:
         username:
           type: string
       type: object
+    immerle.participantView:
+      properties:
+        name:
+          type: string
+        role:
+          type: string
+      type: object
     immerle.passwordRequest:
       properties:
         password:
@@ -1253,6 +1260,10 @@ components:
           type: string
         artistId:
           type: string
+        bpm:
+          type: integer
+        composer:
+          type: string
         contentType:
           type: string
         coverArt:
@@ -1263,10 +1274,25 @@ components:
           type: string
         id:
           type: string
+        lyrics:
+          type: string
+        movementName:
+          type: string
+        movementNumber:
+          type: integer
+        participants:
+          items:
+            $ref: '#/components/schemas/immerle.participantView'
+          type: array
+          uniqueItems: false
         playCount:
           type: integer
         rating:
           type: integer
+        replayGainAlbum:
+          type: number
+        replayGainTrack:
+          type: number
         size:
           type: integer
         starred:
@@ -1278,8 +1304,12 @@ components:
           type: string
         title:
           type: string
+        titleSort:
+          type: string
         track:
           type: integer
+        work:
+          type: string
         year:
           type: integer
       type: object
